--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -4,7 +4,8 @@
       "browser": true
     },
     "rules": {
-        "import/extensions": [ "error", "always", { "ignorePackages": true }],
+      "no-console": "off",
+      "import/extensions": [ "error", "always", { "ignorePackages": true }],
       "react/prop-types": "off"
     }
 }
